--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vuex-manage-state-vue",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/nisan250/vuex-manage-state-vue/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
